--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,17 +14,21 @@ material = "1.12.0"
 activity = "1.9.2"
 constraintlayout = "2.1.4"
 media = "1.7.0"
-mockitoKotlin = "4.0.0"
+mockitoKotlin = "5.4.0"
 mockwebserver = "4.10.0"
 retrofit = "2.11.0"
 hilt = "2.51.1"
 robolectric = "4.9.2"
+rules = "1.6.1"
+runner = "1.6.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-media = { module = "androidx.media:media", version.ref = "media" }
+androidx-rules = { module = "androidx.test:rules", version.ref = "rules" }
+androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
 exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
 github-glide = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
